Bug 70725 - Calc export to PDF shows !!br0ken!! instead of values
Summary: Calc export to PDF shows !!br0ken!! instead of values
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords: regression
: 70726 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-21 14:16 UTC by sophie
Modified: 2013-10-21 16:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sophie 2013-10-21 14:16:23 UTC
Using Version: 4.2.0.0.alpha0+
Build ID: 051731bbcaa79b6428c8ebee6c114c9b28220cc8
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2013-10-21_01:09:11
Step to reproduce:
- fill some data in a new spreadsheet
- export to pdf
- open the new pdf generated
--> instead of the data, !!brOken!! is shown for each of them
Sophie
Comment 1 GerardF 2013-10-21 14:27:53 UTC
Confirmed on Windows also.
So i set platform to from Linux to *All*.
Comment 2 Laurent Balland 2013-10-21 14:35:41 UTC
Hello,

Confirmed on Win7 with master of 16th september
Version: 4.2.0.0.alpha0+
Build ID: bd8f84ceb36954496fd9f053436b0c4a8a5c38db
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-16_00:22:32 

Laurent BP
Comment 3 Maxim Monastirsky 2013-10-21 14:54:45 UTC
Reproducible with Version: 4.2.0.0.alpha0+
Build ID: f4004429d339009bec6babe30becdc9c727940b8
TinderBox: Linux-x86-64@8-SLED11, Branch:master, Time: 2013-08-18_23:20:11
So broken a very long time.

Also added 'regression' keyword, as it's not reproducible with 4.1.2.3, and raised priority.
Comment 4 Maxim Monastirsky 2013-10-21 15:17:56 UTC
Maybe related to Bug 70726?
Comment 5 Caolán McNamara 2013-10-21 15:51:52 UTC
*** Bug 70726 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2013-10-21 16:01:54 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e03e9bfda7c1f5496879587ce1488faf94e6104b

Resolves: fdo#70725 calc export to pdf broken



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.