Resolves: fdo#70725 calc export to pdf broken

Change-Id: Ibfe1d3a319fc82223f340ebd705a1966b8250089